<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.fifthgen.mustage.AccountActivity">

    <item
        android:id="@+id/action_rename"
        android:orderInCategory="102"
        android:title="@string/menu_rename"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_photo"
        android:orderInCategory="102"
        android:title="@string/menu_change_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_following"
        android:orderInCategory="102"
        android:title="@string/menu_following"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="103"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>
